src/test/deca/context/invalid/operations/bool/invalid_bool_op_or_float.deca
// Description:
//    test invalid OR between boolean and float
//
// [Begin Result]
//invalid_bool_op_or_float.deca:12:21: Unsupported operation '||' between types float and boolean. Operation '||' supported only between booleans. (Rule 3.33)
// [End Result]
//
// Historique:
//    cree le 02/01/2025

{
    boolean a = 3.56 || false;
}